# picoDAQ

./: AUTHORS  AnimatedInstruments.py  BMConfig.json  BMconfig.json  BMconfig.yaml  BufferMan.py  DAQconfig.json  DAQconfig.yaml  GraphicalInstruments.py  Kanne.json  LICENSE  PMTpulse.json  PSconfig.json  PSconfig.yaml  README  README.md  ReleaseNotes.txt  SiPMpulse.json  _pyproject.toml  anaDAQ.py  consumers.py  exampleConsumers.py  make_dist.sh  noise.json  picoConfig.py  picoDAQ.py  picoDAQtest.json  picoDAQtest.py  picoDemo.json  picoOsci.json  picoVMeter.json  pulseFilter.py  pulseFilter_new.py  pyproject.toml  runDAQ.py  setup.py  test4Chan.json  testDAQ.py
doc/: picodaqa_scheme.odp
examples/: BMconfig.yaml  DAQ_Cosmo.json  DAQ_Cosmo.yaml  DAQ_Kanne.json  DAQ_Kanne.yaml  DAQ_noise.json  DAQ_noise.yaml  PMpulse.json  PMpulse.yaml  PSVoltMeter.yaml  PSdataLogger.yaml  README  SiPMpulse.yaml  anaDAQ.py  noise.json  noise.yaml  pFconfig.yaml  picoOsci.json  picoOsci.yaml  picodaqa  plotDoublePulses.py  pulseFilter.py  runCosmo.py  runDAQ.py  runDataGraphs.py  runDataLogger.py  runOsci.py  runVoltmeter.py
picodaqa/: AnimatedInstruments.py  BarDisplay.py  BufferMan.py  DataGraphs.py  DataLogger.py  Histogram.py  Oscilloscope.py  RMeter.py  ReleaseNotes.txt  VoltMeter.py  __init__.py  _version_info.py  animHists.py  mpBDisplay.py  mpBufManCntrl.py  mpBufManInfo.py  mpDataGraphs.py  mpDataLogger.py  mpHist.py  mpHists.py  mpLogWin.py  mpOsci.py  mpRMeter.py  mpVMeter.py  picoConfig.py  picolog1000Config.py  plotBufManInfo.py  read_config.py
